--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
+    "firebase": "^8.7.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.12.0"
+    "@types/react-modal": "^3.12.0",
+    "@types/react-slick": "^0.23.4"
   }
 }
