--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.7.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
