--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.7.0",
+    "nanoid": "^3.1.28",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
