--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.12.0",
-    "@types/react-slick": "^0.23.4"
+    "@types/react-slick": "^0.23.4",
+    "@types/react-transition-group": "^4.4.3"
   }
 }
