--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.7.0",
     "nanoid": "^3.1.28",
-    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
@@ -28,8 +27,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.12.0",
-    "@types/react-transition-group": "^4.4.3"
+    "@types/react-transition-group": "^4.4.3",
+    "prettier": "^2.8.8"
   }
 }
